# research-lab

./: .gitignore  README.md  brief.md.example  opencode.json  program.md  pyproject.toml
.github/workflows/: glm5-issue-fix.yml  opencode-main-review-trigger.yml  opencode-main-review.yml  opencode-pr-review.yml  opencode-tag-review-trigger.yml  opencode-tag-review.yml  opencode.yml  update-readme-issues.yml
.opencode/: AGENTS.md  README.md  opencode.json
.opencode/agents/: brief-structurer.md  evidence-hunter.md  lab-director.md  run-reviewer.md
src/research_lab/: __init__.py  __main__.py  briefs.py  cli.py  document_access.py  engine.py  enrichment.py  final_ranking.py  identity.py  lex.py  llm.py  models.py  planner.py  rank.py  report.py  report_assembly.py  retrieval.py  retrieval_plan.py  review.py  run_history.py  search_session.py  source_candidates.py  sources.py  store.py  web_result.py
src/research_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/research_lab/sources/: __init__.py  arxiv.py  duckduckgo.py  extraction.py  googlescholar.py  openalex.py  semanticscholar.py  transport.py
tests/: test_briefs.py  test_cli.py  test_document_access.py  test_engine.py  test_enrichment.py  test_final_ranking.py  test_llm.py  test_models_views.py  test_rank.py  test_report.py  test_review.py  test_source_candidates.py  test_sources.py  test_web_result.py
