[project]
name = "research-lab"
version = "0.1.0"
description = "Iterative literature search laboratory for autonomous research agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
research-lab = "research_lab.cli:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
where = ["src"]
